kubernetes/core/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  labels:
    app: lldap
  annotations:
    argocd.argoproj.io/sync-wave: "110"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:stable
          ports:
            - containerPort: 3890
            - containerPort: 17170
          livenessProbe:
            exec:
              command: ["/app/lldap", "healthcheck", "--config-file", "/data/lldap_config.toml"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: lldap-data
      restartPolicy: Always
      volumes:
        - name: lldap-data
          persistentVolumeClaim:
            claimName: lldap-data
