kubernetes/core/lldap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "120"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: lldap
          port: 17170
  tls:
    secretName: bhamm-lab-tls
